FIXED: Overflow issue in HeroSection

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   /*text-align: center;*/
 }
 
